--- a/src/components/change/change.module.css
+++ b/src/components/change/change.module.css
@@ -5,7 +5,7 @@
 }
 
 .changepassword_pg {
-    background-color: #efc8b1;
+    background-color: #efc8b1 13%;
     height: 100vh;
     width: 100%;
     margin: 0 auto;
@@ -15,7 +15,25 @@
     text-align: center;
 }
 
-h3 {
+.top {
+    display: flex;
+    gap: 35%;
+}
+
+#arrow {
+    background-color: #2e241dc2;
+    color: #efc8b1;
+    width: 3%;
+    height: 5vh;
+    border-radius: 30px;
+    font-size: 1.5rem;
+    margin-left: 20px;
+    margin-top: 0px;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+#topH3 {
     font-size: 2.3rem;
     margin-block-end: 40px;
 }
@@ -35,8 +53,9 @@ h3 {
 }
 
 #form_pg_input {
+    background-color: #f1c5a9c2;
     width: 100%;
-    height: 6vh;
+    height: 7vh;
     border-radius: 5px;
     border: none;
     margin-block-end: 40px;
@@ -79,7 +98,16 @@ button:hover {
     }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 480px) {
+    .top {
+        display: flex;
+        gap: 2%;
+    }
+    
+    #arrow {
+        width: 7%;
+    }
+
     #form_pg {
         width: 90%;
         margin: 10px;
