--- a/src/components/change/change.module.css
+++ b/src/components/change/change.module.css
@@ -5,7 +5,7 @@
 }
 
 .changepassword_pg {
-    background-color: #efc8b1 13%;
+    background-color: #EFC8B121;
     height: 100vh;
     width: 100%;
     margin: 0 auto;
