--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -7,7 +7,7 @@
 
 .home {
     font-size: 2rem;
-    background-image: url("../src/assets/hero.jpg");
+    background-image: url("../../assets/hero.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
