--- a/src/components/cart/cart.module.css
+++ b/src/components/cart/cart.module.css
@@ -134,13 +134,14 @@ h3 {
     margin-top: 30px;
     border: 2px solid #4e3b30c2;
     border-radius: 15px;
-    width: 30%;
-    height: 8vh;
+    width: 35%;
+    height: 9vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
     font-size: 1.2rem;
+    position: relative;
 }
 
 .promo input {
@@ -161,11 +162,13 @@ h3 {
     background-color: transparent;
     font-size: 1.2rem;
     font-weight: 700;
+    position: absolute;
+    right: 1%;
 }
 
 .buyNowBtn {
-    width: 30%;
-    height: 8vh;
+    width: 35%;
+    height: 9vh;
     border-radius: 15px;
     text-align: center;
     border: none;
