--- a/src/components/signin/signin.module.css
+++ b/src/components/signin/signin.module.css
@@ -83,7 +83,6 @@ h3 {
     font-size: 1.5rem;
     padding-block: 10px;
     text-align: center;
-    
     cursor: pointer;
 }
 
@@ -97,22 +96,22 @@ h3 {
         max-width: 95%;
     }
     .signin_pg h3 {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
     }
 
     #input {
-        font-size: 1.5rem;
-       
+        font-size: 1.2rem;
     }
 
     #signinbtn {
         width: 100%;
-        padding-block: 6%;
-        font-size: 2.1rem;
+        padding-block: 3%;
+        font-size: 1.8rem;
+        margin-top: 8%;
     }
 
     #fgtpw {
-        font-size: 1.9rem;
+        font-size: 1.6rem;
         margin-left: 25px;
         margin-top: 20px;
     }
